--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,8 @@
 RewriteEngine On
 
+RewriteCond %{REQUEST_URI} !^/dealerhub-staging/public/
+RewriteRule ^(.*)$ public/$1 [L]
+
 # Serve the public directory as the web root.
 RewriteRule ^$ public/index.php [L]
 RewriteRule (.*) public/$1 [L]
