--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ DB_USER=u427445037_dealerhub
 DB_NAME=u427445037_dealerhub
 DB_PASS="Nst2Ta!b2O"
 DEBUG=true
-APP_URL="http://localhost:8000"
+APP_URL="https://coresuite.it/dealerhub-staging/"
