Aggiungi configurazioni per la connessione al database e impostazioni dell'applicazione nel file .env

--- a/.env
+++ b/.env
@@ -1,6 +1,25 @@
+# =====================
+# Database connection
+# =====================
 DB_HOST=193.203.168.205
-DB_USER=u427445037_dealerhub
+DB_PORT=3306
 DB_NAME=u427445037_dealerhub
+DB_USER=u427445037_dealerhub
 DB_PASS="Nst2Ta!b2O"
-DEBUG=true
+
+# =====================
+# Application settings
+# =====================
 APP_URL="https://coresuite.it/dealerhub-staging/"
+APP_KEY="change-this-key"
+DEBUG=true
+
+# =====================
+# Storage paths
+# =====================
+UPLOAD_BASE_PATH="/home/u427445037/public_html/uploads/contratti"
+
+# =====================
+# Frontend → Backend
+# =====================
+NEXT_PUBLIC_API_BASE_URL="https://dealer.coresuite.it/api"
