refactor: Aggiorna configurazione .env per supportare variabili d'ambiente e rimuovi metadati non necessari da page.tsx

--- a/.env
+++ b/.env
@@ -1,25 +1,25 @@
 # =====================
 # Database connection
 # =====================
-DB_HOST=193.203.168.205
-DB_PORT=3306
-DB_NAME=u427445037_dealerhub
-DB_USER=u427445037_dealerhub
-DB_PASS="Nst2Ta!b2O"
+DB_HOST=${RENDER_DB_HOST:-193.203.168.205}
+DB_PORT=${RENDER_DB_PORT:-3306}
+DB_NAME=${RENDER_DB_NAME:-u427445037_dealerhub}
+DB_USER=${RENDER_DB_USER:-u427445037_dealerhub}
+DB_PASS=${RENDER_DB_PASS:-"Nst2Ta!b2O"}
 
 # =====================
 # Application settings
 # =====================
-APP_URL="https://coresuite.it/dealerhub-staging/"
-APP_KEY="change-this-key"
+APP_URL=${RENDER_APP_URL:-"https://dealerhub-frontend.onrender.com"}
+APP_KEY=${APP_KEY:-"change-this-key"}
 DEBUG=true
 
 # =====================
 # Storage paths
 # =====================
-UPLOAD_BASE_PATH="/home/u427445037/public_html/uploads/contratti"
+UPLOAD_BASE_PATH=${UPLOAD_BASE_PATH:-"/opt/render/project/src/uploads/contratti"}
 
 # =====================
 # Frontend → Backend
 # =====================
-NEXT_PUBLIC_API_BASE_URL="https://dealer.coresuite.it/api"
+NEXT_PUBLIC_API_BASE_URL=${NEXT_PUBLIC_API_BASE_URL:-"https://dealerhub-backend.onrender.com/api"}
