feat: Aggiungi script di migrazione per il superadmin e aggiorna il file di popolamento del database

--- a/.env
+++ b/.env
@@ -22,4 +22,4 @@ UPLOAD_BASE_PATH="/home/u427445037/public_html/uploads/contratti"
 # =====================
 # Frontend → Backend
 # =====================
-NEXT_PUBLIC_API_BASE_URL="https://dealer.coresuite.it/api"
+NEXT_PUBLIC_API_BASE_URL="https://dealerhub-backend.onrender.com/api"
