Update .env for Render deploy: API base URL, upload path, secure APP_KEY

--- a/backend/.env
+++ b/backend/.env
@@ -11,15 +11,15 @@ DB_PASS="Nst2Ta!b2O"
 # Application settings
 # =====================
 APP_URL="https://coresuite.it/dealerhub-staging/"
-APP_KEY="UJZqrAcVMHvU64bpeu1GzV69FLRq4nRJ7WBq47+CGxM="
-DEBUG=false
+APP_KEY="change-this-key"
+DEBUG=true
 
 # =====================
 # Storage paths
 # =====================
-UPLOAD_BASE_PATH="/opt/render/project/src/uploads/contratti"
+UPLOAD_BASE_PATH="/home/u427445037/public_html/uploads/contratti"
 
 # =====================
 # Frontend → Backend
 # =====================
-NEXT_PUBLIC_API_BASE_URL="https://dealerhub-backend.onrender.com/api"
+NEXT_PUBLIC_API_BASE_URL="http://localhost:8000/api"
