--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,8 +13,11 @@ RUN docker-php-ext-install pdo pdo_mysql
 # Create uploads directory
 RUN mkdir -p /var/www/html/uploads/contratti && chmod 775 /var/www/html/uploads/contratti
 
-# Enable mod_rewrite for .htaccess
-RUN a2enmod rewrite
+# Enable mod_rewrite and mod_headers
+RUN a2enmod rewrite headers
+
+# Allow .htaccess overrides
+RUN echo '<Directory /var/www/html>\n    AllowOverride All\n</Directory>' >> /etc/apache2/apache2.conf
 
 # Expose port 80
 EXPOSE 80
